--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,7 @@
     "gatsby-plugin-sharp": "^3.6.0",
     "gatsby-source-filesystem": "^3.6.0",
     "gatsby-transformer-sharp": "^3.6.0",
+    "js-cookie": "^2.2.1",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-card-flip": "^1.1.1",
