--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,6 +27,7 @@
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-card-flip": "^1.1.1",
+    "react-device-detect": "^1.17.0",
     "react-dom": "^17.0.1",
     "react-textarea-autosize": "^8.3.3",
     "sass": "^1.34.1",
