revise torch package for deploy

--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,7 +1,9 @@
+-f https://download.pytorch.org/whl/torch_stable.html
+torch== 1.8.1+cpu 
+torchvision==0.9.1+cpu
 numpy
 gensim
 transformers
-torch
 flask
 flask_cors
 gunicorn
