--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,8 +16,10 @@
   },
   "dependencies": {
     "@webscopeio/react-textarea-autocomplete": "^4.7.3",
+    "dotenv": "^10.0.0",
     "framer-motion": "^4.1.17",
     "gatsby": "^3.6.2",
+    "gatsby-plugin-config": "^1.0.7",
     "gatsby-plugin-image": "^1.6.0",
     "gatsby-plugin-sass": "^4.6.0",
     "gatsby-plugin-sharp": "^3.6.0",
@@ -32,5 +34,9 @@
     "react-textarea-autosize": "^8.3.3",
     "sass": "^1.34.1",
     "textarea-caret": "^3.1.0"
+  },
+  "devDependencies": {
+    "@types/js-cookie": "^2.2.6",
+    "@types/node": "^15.12.4"
   }
 }
