--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "gatsby": "^3.6.2",
     "gatsby-plugin-config": "^1.0.7",
     "gatsby-plugin-image": "^1.6.0",
+    "gatsby-plugin-manifest": "^3.7.1",
     "gatsby-plugin-sass": "^4.6.0",
     "gatsby-plugin-sharp": "^3.6.0",
     "gatsby-source-filesystem": "^3.6.0",
@@ -31,6 +32,7 @@
     "react-card-flip": "^1.1.1",
     "react-device-detect": "^1.17.0",
     "react-dom": "^17.0.1",
+    "react-loader-spinner": "^4.0.0",
     "react-textarea-autosize": "^8.3.3",
     "sass": "^1.34.1",
     "textarea-caret": "^3.1.0"
